--- a/README.rdoc
+++ b/README.rdoc
@@ -1,9 +1,18 @@
-= better_imap
+= redmine_better_imap
 
-Description goes here
+Redmine plugin for taking mail from IMAP server and create issues in redmine.
 
 = Dependencies
 
 Install +mail+ gem:
 
-+gem install mail -v '2.4.4'+
+gem install mail -v '2.4.4'
+
+= Notes
+
+If you are using MySQL, configure it:
+
+[mysqld]
+max_allowed_packet=128M
+
+Or more.
